Reduce upload area height by 50% and update header to match index.html style with proper dropdowns

--- a/add-page-numbers.html
+++ b/add-page-numbers.html
@@ -18,10 +18,10 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
 .converter-header h1{font-size:2.2rem;color:var(--primary);margin-bottom:10px}
 .converter-header p{font-size:1.05rem;color:var(--gray)}
 .converter-card{background:#fff;border-radius:12px;padding:30px;box-shadow:0 5px 15px rgba(0,0,0,0.08);margin-bottom:30px}
-.upload-area{border:3px dashed #ddd;border-radius:12px;padding:60px 20px;text-align:center;cursor:pointer;margin-bottom:20px;transition:all 0.3s ease}
+.upload-area{border:3px dashed #ddd;border-radius:12px;padding:30px 20px;text-align:center;cursor:pointer;margin-bottom:20px;transition:all 0.3s ease}
 .upload-area:hover,.upload-area.dragover{border-color:var(--primary);background:rgba(67,97,238,0.05)}
-.upload-icon{font-size:64px;color:var(--primary);margin-bottom:15px}
-.upload-area h3{font-size:1.5rem;margin-bottom:10px}
+.upload-icon{font-size:32px;color:var(--primary);margin-bottom:10px}
+.upload-area h3{font-size:1.2rem;margin-bottom:8px}
 .upload-area p{color:var(--gray);margin-bottom:5px}
 .file-input{display:none}
 .file-info{background:var(--light);border-radius:12px;padding:20px;margin:20px 0;display:none}
@@ -51,17 +51,17 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
 <nav class="navbar">
 <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo" style="height:54px;"></a>
 <div class="nav-links">
-<div class="dropdown"><a href="jpg-to-pdf.html">Convert to PDF <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown"><a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
 <div class="dropdown-content"><a href="jpg-to-pdf.html">JPG to PDF</a><a href="word-to-pdf.html">Word to PDF</a><a href="excel-to-pdf.html">Excel to PDF</a><a href="ppt-to-pdf.html">PowerPoint to PDF</a></div></div>
-<div class="dropdown"><a href="pdf-to-jpg.html">Convert from PDF <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown"><a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
 <div class="dropdown-content"><a href="pdf-to-jpg.html">PDF to JPG</a><a href="pdf-to-word.html">PDF to Word</a><a href="pdf-to-excel.html">PDF to Excel</a><a href="pdf-to-ppt.html">PDF to PowerPoint</a></div></div>
-<div class="dropdown"><a href="merge-pdf.html">Pdf Editor <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown"><a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
 <div class="dropdown-content"><a href="merge-pdf.html">Merge PDF</a><a href="split-pdf.html">Split PDF</a><a href="compress-pdf.html">Compress PDF</a><a href="edit-pdf.html">Pdf Editor</a><a href="protect-pdf.html">Protect PDF</a><a href="unlock-pdf.html">Unlock PDF</a><a href="watermark-pdf.html">Watermark PDF</a><a href="crop-pdf.html">Crop PDF</a><a href="add-page-numbers.html">Add Page Numbers</a></div></div>
-<div class="dropdown"><a href="image-compressor.html">Image Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown"><a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
 <div class="dropdown-content"><a href="image-compressor.html">Image Compressor</a><a href="image-resizer.html">Image Resizer</a><a href="image-editor.html">Image Editor</a><a href="background-remover.html">Image Background Remover</a><a href="ocr-image.html">OCR Image</a><a href="image-watermark.html">Image Watermark Tool</a></div></div>
-<div class="dropdown"><a href="resume-maker.html">Design Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown"><a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
 <div class="dropdown-content"><a href="resume-maker.html">Resume Maker</a><a href="biodata-maker.html">Marrige Biodata-Data Maker</a><a href="ai-image-generator.html">AI Image Generator</a><a href="marriage-card.html">Marriage Card</a></div></div>
-<div class="dropdown"><a href="protect-excel.html">Other Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown"><a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
 <div class="dropdown-content"><a href="excel-unlocker/" target="_blank">Excel Unlocker</a><a href="protect-excel.html">Protect Excel Sheet</a></div></div>
 </div>
 <div class="auth-buttons"><a href="login.html" class="auth-link">Sign In</a><a href="signup.html" class="auth-btn"><i class="fas fa-user-plus"></i><span>Signup</span></a></div>
