--- a/index.html
+++ b/index.html
@@ -688,12 +688,17 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
-            max-height: 400px;
+            height: 600px;
+            max-height: 600px;
         }
 
         #feedback-thread-card {
-            gap: 12px;
-            overflow-y: auto;
+            gap: 8px;
+            overflow: hidden;
+        }
+
+        .thread-header {
+            margin-bottom: 8px;
         }
 
         #feedback-reply-panel {
@@ -702,13 +707,22 @@
         }
 
         .feedback-card h3 {
-            font-size: 1.1rem;
+            font-size: 1rem;
             color: var(--primary);
             margin: 0;
+            padding-bottom: 8px;
+            border-bottom: 2px solid rgba(67, 97, 238, 0.1);
         }
 
         .feedback-card p {
             color: var(--gray);
+            font-size: 0.85rem;
+        }
+
+        .feedback-hint {
+            font-size: 0.8rem;
+            color: var(--gray);
+            margin: 0;
         }
 
         .comment-form {
@@ -747,10 +761,10 @@
             list-style: none;
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 8px;
             margin: 0;
             padding: 0;
-            max-height: 130px;
+            flex: 1;
             overflow-y: auto;
             padding-right: 6px;
             scrollbar-width: thin;
@@ -773,40 +787,41 @@
 
         .live-comment {
             background-color: white;
-            border-radius: 12px;
-            padding: 14px;
-            box-shadow: 0 6px 14px rgba(0, 0, 0, 0.05);
+            border-radius: 10px;
+            padding: 10px 12px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.04);
         }
 
         .reply-inline-panel {
-            margin-top: 12px;
-            padding: 12px;
+            margin-top: 8px;
+            padding: 10px;
             background: rgba(67, 97, 238, 0.06);
-            border-radius: 12px;
+            border-radius: 10px;
             border: 1px dashed rgba(67, 97, 238, 0.3);
         }
 
         .comment-replies {
-            margin-top: 12px;
-            padding-left: 16px;
-            border-left: 3px solid rgba(67, 97, 238, 0.2);
+            margin-top: 8px;
+            padding-left: 12px;
+            border-left: 2px solid rgba(67, 97, 238, 0.2);
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 6px;
         }
 
         .comment-reply {
             background: rgba(67, 97, 238, 0.05);
-            border-radius: 10px;
-            padding: 10px 12px;
+            border-radius: 8px;
+            padding: 8px 10px;
+            font-size: 0.85rem;
         }
 
         .comment-reply .reply-meta {
             display: flex;
             justify-content: space-between;
-            font-size: 0.8rem;
+            font-size: 0.75rem;
             color: var(--gray);
-            margin-bottom: 6px;
+            margin-bottom: 4px;
         }
 
         .feedback-reply-trigger {
@@ -825,41 +840,59 @@
             text-decoration: underline;
         }
 
+        /* Mobile Responsive Adjustments */
+        @media (max-width: 768px) {
+            .feedback-grid {
+                grid-template-columns: 1fr;
+            }
+            
+            .feedback-card {
+                height: auto;
+                max-height: 500px;
+            }
+            
+            .comment-list {
+                max-height: 300px;
+            }
+        }
+
         .comment-form .form-group {
-            margin-bottom: 12px;
+            margin-bottom: 10px;
         }
 
         .comment-form .form-group label {
-            margin-bottom: 6px;
-            font-size: 0.9rem;
+            margin-bottom: 4px;
+            font-size: 0.85rem;
+            font-weight: 600;
         }
 
         .comment-form .form-control {
-            padding: 10px 12px;
-            font-size: 0.95rem;
+            padding: 8px 10px;
+            font-size: 0.9rem;
         }
 
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 14px;
         }
 
         .form-group label {
             display: block;
-            margin-bottom: 8px;
+            margin-bottom: 6px;
             font-weight: 500;
+            font-size: 0.9rem;
         }
 
         .form-control {
             width: 100%;
-            padding: 12px 15px;
+            padding: 10px 12px;
             border: 1px solid #ddd;
             border-radius: 8px;
-            font-size: 1rem;
+            font-size: 0.9rem;
             background-color: white;
         }
 
         textarea.form-control {
-            min-height: 48px;
+            min-height: 42px;
             resize: vertical;
         }
 
@@ -867,23 +900,30 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 10px;
-            gap: 10px;
+            margin-bottom: 6px;
+            gap: 8px;
         }
 
         .live-comment-name {
             font-weight: 600;
             color: var(--dark);
+            font-size: 0.9rem;
         }
 
         .live-comment-time {
-            font-size: 0.85rem;
+            font-size: 0.75rem;
             color: var(--gray);
         }
 
         .live-comment-rating {
-            font-size: 0.95rem;
+            font-size: 0.85rem;
             color: #f5a623;
+        }
+
+        .live-comment-text {
+            font-size: 0.85rem;
+            line-height: 1.4;
+            color: var(--dark);
         }
 
         .rating-overview {
