--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2131,7 +2131,7 @@
                             </div>
                             <div class="form-group button-group">
                                 <label>&nbsp;</label>
-                                <button type="submit" class="btn btn-primary btn-donate-sm">
+                                <button type="submit" class="btn btn-primary btn-donate-sm" style="cursor: pointer; transition: all 0.2s ease;" onmousedown="this.style.transform='scale(0.95)';" onmouseup="this.style.transform='scale(1)';" onmouseleave="this.style.transform='scale(1)';">
                                     <i class="fas fa-heart"></i> Donate
                                 </button>
                             </div>
