Add 3-tier background remover: Browser (0-15MB), Render free (15-50MB), Google Cloud Run premium (50-100MB) with complete deployment files for both backends

--- a/background-remover.html
+++ b/background-remover.html
@@ -278,8 +278,8 @@
 
     async function handleFile(file) {
       if (!file) return;
-      if (file.size > 50 * 1024 * 1024) {
-        showStatus('Please pick an image smaller than 50MB (Free version limit).');
+      if (file.size > 100 * 1024 * 1024) {
+        showStatus('Please pick an image smaller than 100MB. (50+MB files use premium cloud processing)');
         return;
       }
 
