Connected to live Render backend: https://doctools-bg-remover.onrender.com

--- a/background-workspace.html
+++ b/background-workspace.html
@@ -258,8 +258,8 @@
     // Tier 3: 50-100 MB → Cloud Run (Docker Rembg) - Free 2M requests/month
     // ============================================
     
-    // STEP 1: Deploy Render backend and update this URL
-    const RENDER_API_URL = 'https://YOUR-RENDER-SERVICE.onrender.com/remove-background';
+    // STEP 1: Render backend URL (DEPLOYED AND LIVE!)
+    const RENDER_API_URL = 'https://doctools-bg-remover.onrender.com/remove-background';
     
     // STEP 2: (Optional) Deploy Cloud Run backend for 50+ MB files
     const CLOUDRUN_API_URL = 'https://YOUR-CLOUDRUN-SERVICE.run.app/remove-background';
