--- a/background-workspace.html
+++ b/background-workspace.html
@@ -268,52 +268,41 @@
     function getProcessingConfig(fileSize) {
       const sizeMB = fileSize / (1024 * 1024);
       
-      // Tier 1: Browser AI (IMG.LY U²-Net)
-      if (fileSize < 8 * 1024 * 1024) {
-        // 0-8 MB: High quality browser processing
+      // Tier 1: Browser AI (IMG.LY U²-Net) - HIGHEST QUALITY
+      if (fileSize < 15 * 1024 * 1024) {
+        // 0-15 MB: Maximum quality browser processing
         return {
           useBackend: false,
-          model: 'medium',
-          quality: 0.95,
-          description: 'High Quality AI (Browser)',
-          message: `Processing ${sizeMB.toFixed(1)} MB with advanced AI`,
+          model: 'medium',  // Best model
+          quality: 1.0,     // MAXIMUM quality (100%)
+          description: 'Professional Quality AI (Browser)',
+          message: `Processing ${sizeMB.toFixed(1)} MB with professional AI`,
           tier: 'browser',
-          info: '⚡ High quality processing, instant results'
-        };
-      } else if (fileSize < 15 * 1024 * 1024) {
-        // 8-15 MB: Browser with medium model for best quality
-        return {
-          useBackend: false,
-          model: 'medium',
-          quality: 0.98,
-          description: 'Premium Quality AI (Browser)',
-          message: `Processing ${sizeMB.toFixed(1)} MB with premium AI`,
-          tier: 'browser',
-          info: '🎯 Premium quality, precise edge detection'
+          info: '🎨 Professional quality - No over-cleaning'
         };
       } 
-      // Tier 2: Render Backend (Python Rembg)
-      else if (fileSize < 50 * 1024 * 1024) {
-        // 15-50 MB: Professional server processing (Free)
+      // Tier 2: Google Cloud Run (Rembg U²-Net)
+      else if (fileSize < 100 * 1024 * 1024) {
+        // 15-100 MB: Professional server processing (FREE 20k/month)
         return {
           useBackend: true,
-          backendUrl: RENDER_API_URL,
+          backendUrl: CLOUDRUN_API_URL,
           description: 'Professional AI (Free Server)',
           message: `Uploading ${sizeMB.toFixed(1)} MB to professional AI server`,
           tier: 'render',
           info: '🚀 Professional quality with Rembg AI (Free)'
         };
       } 
-      // Tier 3: Cloud Run Backend (Premium Docker)
+      // Tier 2: Google Cloud Run (Rembg U²-Net) - PROFESSIONAL
       else if (fileSize < 100 * 1024 * 1024) {
-        // 50-100 MB: Premium cloud processing with optimization
+        // 15-100 MB: Professional cloud processing (FREE 20k/month)
         return {
           useBackend: true,
           backendUrl: CLOUDRUN_API_URL,
-          description: 'Premium AI (Google Cloud)',
-          message: `Uploading ${sizeMB.toFixed(1)} MB to premium cloud AI`,
+          description: 'Google Cloud Run - Rembg U²-Net',
+          message: `Processing ${sizeMB.toFixed(1)} MB with Cloud AI (Same as Photopea)`,
           tier: 'cloudrun',
-          info: '⭐ Premium quality with alpha matting (Google Cloud)'
+          info: '☁️ Professional quality - FREE 20,000/month'
         };
       } 
       // Error: File too large
