Added animated SVG demos showing background removal process

--- a/background-remover.html
+++ b/background-remover.html
@@ -186,6 +186,12 @@
       </div>
       <div class="quick-help">
         <h3>Why it's awesome</h3>
+        
+        <!-- Animated Demo -->
+        <div style="margin: 16px 0; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(67,97,238,0.15);">
+          <img src="images/bg-removal-city-demo.svg" alt="Background Removal Demo" style="width: 100%; height: auto; display: block;">
+        </div>
+        
         <ul>
           <li><i class="fas fa-check-circle"></i> No sign up. Works offline after first load.</li>
           <li><i class="fas fa-check-circle"></i> Supports photos, products, and portraits.</li>
