Processing Info panel width reduced to 40%

--- a/background-workspace.html
+++ b/background-workspace.html
@@ -31,7 +31,7 @@
     .quick-links { display: flex; gap: 10px; flex-wrap: wrap; }
     .quick-links a { text-decoration: none; padding: 8px 16px; border-radius: 999px; border: 1px solid var(--border); color: #253156; font-weight: 600; background: rgba(67, 97, 238, 0.08); transition: transform 0.2s, box-shadow 0.2s, background 0.2s; }
     .quick-links a:hover { background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; transform: translateY(-1px); box-shadow: 0 12px 24px rgba(67, 97, 238, 0.2); }
-    main { flex: 1; width: 100%; max-width: 1200px; margin: 36px auto; padding: 0 24px 48px; display: grid; grid-template-columns: minmax(320px, 500px) 1fr; gap: 32px; align-items: start; }
+    main { flex: 1; width: 100%; max-width: 1200px; margin: 36px auto; padding: 0 24px 48px; display: grid; grid-template-columns: 1fr 40%; gap: 32px; align-items: start; }
     .panel { background: var(--surface); border-radius: 24px; padding: 28px; box-shadow: 0 20px 45px rgba(15, 30, 70, 0.08); }
     .panel h2 { font-size: 1.35rem; margin-bottom: 18px; display: flex; gap: 12px; align-items: center; color: #171f4d; }
     .preview-stage { position: relative; width: 8.5cm; height: 6cm; max-width: 100%; max-height: 100%; margin: 0 auto; border-radius: 18px; background: repeating-conic-gradient(#e5e9ff 0deg 25deg, #f8f9ff 25deg 50deg); overflow: hidden; display: flex; align-items: center; justify-content: center; }
