Excel Unlocker: Added full index.html header/footer + fixed navigation links to excel-unlocker.html

--- a/index.html
+++ b/index.html
@@ -1772,7 +1772,7 @@
                     <div class="dropdown">
                         <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
+                            <a href="excel-unlocker.html">Excel Unlocker</a>
                             <a href="protect-excel.html">Protect Excel Sheet</a>
                         </div>
                     </div>
@@ -1880,7 +1880,7 @@
                     <h3>Protect Excel</h3>
                     <p>Add password protection to Excel files.</p>
                 </div>
-                <div class="tool-card" onclick="window.open('excel-unlocker/', '_blank')">
+                <div class="tool-card" onclick="location.href='excel-unlocker.html'">
                     <div class="tool-icon">
                         <i class="fas fa-unlock-alt"></i>
                     </div>
