Excel Unlocker: Connected to production Render backend

--- a/excel-unlocker.html
+++ b/excel-unlocker.html
@@ -218,7 +218,7 @@
     // Backend API URL - Automatically detects environment
     const API_BASE_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
       ? 'http://127.0.0.1:5000'  // Local development
-      : 'https://excel-unlocker-backend.onrender.com';  // Production - UPDATE THIS AFTER RENDER DEPLOYMENT
+      : 'https://excel-unlocker-backend.onrender.com';  // Production - Render deployment
     
     const form = document.getElementById('unlockForm');
     const fileInput = document.getElementById('fileInput');
