--- a/excel-unlocker.html
+++ b/excel-unlocker.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Remove password protection from Excel files online. Fast, secure, and free Excel unlocker tool.">
   <title>Excel Unlocker - Remove Password Protection | easyjpgtopdf</title>
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/header.css">
