Add security features section to Excel Unlocker page

--- a/excel-unlocker.html
+++ b/excel-unlocker.html
@@ -194,6 +194,48 @@
           </li>
         </ul>
       </div>
+
+      <div class="info-card">
+        <h3><i class="fas fa-shield-check"></i> Security & Privacy Features</h3>
+        <ul>
+          <li>
+            <i class="fas fa-check-circle"></i>
+            <div>
+              <strong>CORS Enabled:</strong> Only allowed domains can access the service
+            </div>
+          </li>
+          <li>
+            <i class="fas fa-check-circle"></i>
+            <div>
+              <strong>File Size Limits:</strong> Maximum 500MB for optimal performance
+            </div>
+          </li>
+          <li>
+            <i class="fas fa-check-circle"></i>
+            <div>
+              <strong>Secure File Handling:</strong> Auto-delete after download
+            </div>
+          </li>
+          <li>
+            <i class="fas fa-check-circle"></i>
+            <div>
+              <strong>HTTPS Encryption:</strong> All data transmitted securely
+            </div>
+          </li>
+          <li>
+            <i class="fas fa-check-circle"></i>
+            <div>
+              <strong>No Storage:</strong> Files are processed temporarily only
+            </div>
+          </li>
+          <li>
+            <i class="fas fa-check-circle"></i>
+            <div>
+              <strong>Input Validation:</strong> Only .xls and .xlsx files accepted
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </section>
 
