--- a/excel-unlocker.html
+++ b/excel-unlocker.html
@@ -139,8 +139,7 @@
 
       <div class="upload-card">
         <i class="fas fa-file-excel"></i>
-        <h2>Upload Protected Excel File</h2>
-        <p>Select your password-protected Excel file (XLS, XLSX)</p>
+        <h2>Excel Unlocker</h2>
         
         <form id="unlockForm" style="width: 100%;">
           <div class="form-group">
@@ -163,6 +162,36 @@
         </form>
 
         <div id="statusMessage" class="status-message"></div>
+
+        <hr style="margin: 20px 0; border: none; border-top: 1px solid var(--border);">
+
+        <h3 style="font-size: 1.1rem; margin-bottom: 12px; color: var(--dark);"><i class="fas fa-shield-check"></i> Security & Privacy</h3>
+        <ul style="list-style: none; display: flex; flex-direction: column; gap: 8px; color: var(--muted); font-size: 0.85rem; text-align: left;">
+          <li style="display: flex; gap: 8px; align-items: flex-start;">
+            <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px; font-size: 0.9rem;"></i>
+            <div><strong>CORS Enabled:</strong> Only allowed domains</div>
+          </li>
+          <li style="display: flex; gap: 8px; align-items: flex-start;">
+            <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px; font-size: 0.9rem;"></i>
+            <div><strong>File Size Limits:</strong> Max 500MB</div>
+          </li>
+          <li style="display: flex; gap: 8px; align-items: flex-start;">
+            <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px; font-size: 0.9rem;"></i>
+            <div><strong>Secure Handling:</strong> Auto-delete after download</div>
+          </li>
+          <li style="display: flex; gap: 8px; align-items: flex-start;">
+            <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px; font-size: 0.9rem;"></i>
+            <div><strong>HTTPS Encryption:</strong> All data secure</div>
+          </li>
+          <li style="display: flex; gap: 8px; align-items: flex-start;">
+            <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px; font-size: 0.9rem;"></i>
+            <div><strong>No Storage:</strong> Files processed temporarily</div>
+          </li>
+          <li style="display: flex; gap: 8px; align-items: flex-start;">
+            <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px; font-size: 0.9rem;"></i>
+            <div><strong>Input Validation:</strong> Only .xls/.xlsx accepted</div>
+          </li>
+        </ul>
       </div>
 
       <div class="info-card">
@@ -190,48 +219,6 @@
             <i class="fas fa-shield-alt"></i>
             <div>
               <strong>Privacy:</strong> Files are processed securely and deleted after download
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div class="info-card">
-        <h3><i class="fas fa-shield-check"></i> Security & Privacy Features</h3>
-        <ul>
-          <li>
-            <i class="fas fa-check-circle"></i>
-            <div>
-              <strong>CORS Enabled:</strong> Only allowed domains can access the service
-            </div>
-          </li>
-          <li>
-            <i class="fas fa-check-circle"></i>
-            <div>
-              <strong>File Size Limits:</strong> Maximum 500MB for optimal performance
-            </div>
-          </li>
-          <li>
-            <i class="fas fa-check-circle"></i>
-            <div>
-              <strong>Secure File Handling:</strong> Auto-delete after download
-            </div>
-          </li>
-          <li>
-            <i class="fas fa-check-circle"></i>
-            <div>
-              <strong>HTTPS Encryption:</strong> All data transmitted securely
-            </div>
-          </li>
-          <li>
-            <i class="fas fa-check-circle"></i>
-            <div>
-              <strong>No Storage:</strong> Files are processed temporarily only
-            </div>
-          </li>
-          <li>
-            <i class="fas fa-check-circle"></i>
-            <div>
-              <strong>Input Validation:</strong> Only .xls and .xlsx files accepted
             </div>
           </li>
         </ul>
