Revert "Move hero content into upload card - clean layout with description inside card"
This reverts commit d6ff13bc9dc2f3783597587437e7bdb32c7b05c4.

--- a/excel-unlocker.html
+++ b/excel-unlocker.html
@@ -132,10 +132,14 @@
 
   <section class="hero">
     <div class="container">
+      <div class="hero-content">
+        <h1><i class="fas fa-unlock-alt"></i> Excel Unlocker</h1>
+        <p>Remove password protection from Excel files instantly. Upload your protected Excel file and unlock it for free.</p>
+      </div>
+
       <div class="upload-card">
         <i class="fas fa-file-excel"></i>
         <h2>Excel Unlocker</h2>
-        <p style="color: var(--muted); font-size: 0.95rem; margin-bottom: 20px;">Remove password protection from Excel files instantly. Upload your protected Excel file and unlock it for free.</p>
         
         <form id="unlockForm" style="width: 100%;">
           <div class="form-group">
