Add Security & Privacy features to hero content section

--- a/excel-unlocker.html
+++ b/excel-unlocker.html
@@ -135,6 +135,36 @@
       <div class="hero-content">
         <h1><i class="fas fa-unlock-alt"></i> Excel Unlocker</h1>
         <p>Remove password protection from Excel files instantly. Upload your protected Excel file and unlock it for free.</p>
+        
+        <div style="margin-top: 24px; background: rgba(67, 97, 238, 0.05); border-left: 4px solid var(--primary); padding: 16px 20px; border-radius: 8px;">
+          <h3 style="font-size: 1.1rem; margin-bottom: 12px; color: var(--dark);"><i class="fas fa-shield-check"></i> Security & Privacy</h3>
+          <ul style="list-style: none; display: flex; flex-direction: column; gap: 8px; color: var(--muted); font-size: 0.9rem;">
+            <li style="display: flex; gap: 8px; align-items: flex-start;">
+              <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px;"></i>
+              <div><strong>CORS Enabled:</strong> Only allowed domains</div>
+            </li>
+            <li style="display: flex; gap: 8px; align-items: flex-start;">
+              <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px;"></i>
+              <div><strong>File Size Limits:</strong> Max 500MB</div>
+            </li>
+            <li style="display: flex; gap: 8px; align-items: flex-start;">
+              <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px;"></i>
+              <div><strong>Secure Handling:</strong> Auto-delete after download</div>
+            </li>
+            <li style="display: flex; gap: 8px; align-items: flex-start;">
+              <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px;"></i>
+              <div><strong>HTTPS Encryption:</strong> All data secure</div>
+            </li>
+            <li style="display: flex; gap: 8px; align-items: flex-start;">
+              <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px;"></i>
+              <div><strong>No Storage:</strong> Files processed temporarily</div>
+            </li>
+            <li style="display: flex; gap: 8px; align-items: flex-start;">
+              <i class="fas fa-check-circle" style="color: var(--primary); margin-top: 2px;"></i>
+              <div><strong>Input Validation:</strong> Only .xls/.xlsx accepted</div>
+            </li>
+          </ul>
+        </div>
       </div>
 
       <div class="upload-card">
