--- a/unlock-pdf.html
+++ b/unlock-pdf.html
@@ -245,8 +245,8 @@
   </footer>
 
   <script>
-    // Backend API URL - Production Render backend (will be updated after deployment)
-    const API_BASE_URL = 'https://pdf-unlocker-backend.onrender.com';
+    // Backend API URL - Production Render backend
+    const API_BASE_URL = 'https://pdf-unlocker-0yw2.onrender.com';
     
     const form = document.getElementById('unlockForm');
     const fileInput = document.getElementById('fileInput');
