Fix PDF Unlocker text (Excel->PDF) and add to README

--- a/unlock-pdf.html
+++ b/unlock-pdf.html
@@ -212,7 +212,7 @@
           <li>
             <i class="fas fa-check-circle"></i>
             <div>
-              <strong>Download:</strong> Get your unlocked Excel file instantly
+              <strong>Download:</strong> Get your unlocked PDF file instantly
             </div>
           </li>
           <li>
