Add clarification: PDF password required for encrypted files

--- a/unlock-pdf.html
+++ b/unlock-pdf.html
@@ -183,7 +183,10 @@
             <label for="passwordInput">
               <i class="fas fa-key"></i> Password (if known)
             </label>
-            <input type="password" id="passwordInput" placeholder="Leave empty to try removing protection">
+            <input type="password" id="passwordInput" placeholder="Enter PDF password (required for encrypted PDFs)">
+            <small style="display: block; margin-top: 6px; color: var(--muted); font-size: 0.85rem;">
+              <i class="fas fa-info-circle"></i> If you don't know the password, the PDF cannot be unlocked. Only works with known passwords.
+            </small>
           </div>
 
           <button type="submit" class="btn btn-primary" id="unlockBtn">
