Add advanced PDF unlocking: pikepdf + common passwords + owner bypass

--- a/unlock-pdf.html
+++ b/unlock-pdf.html
@@ -181,11 +181,11 @@
 
           <div class="form-group">
             <label for="passwordInput">
-              <i class="fas fa-key"></i> Password (if known)
+              <i class="fas fa-key"></i> Password (optional)
             </label>
-            <input type="password" id="passwordInput" placeholder="Enter PDF password (required for encrypted PDFs)">
+            <input type="password" id="passwordInput" placeholder="Leave empty to try automatic unlock">
             <small style="display: block; margin-top: 6px; color: var(--muted); font-size: 0.85rem;">
-              <i class="fas fa-info-circle"></i> If you don't know the password, the PDF cannot be unlocked. Only works with known passwords.
+              <i class="fas fa-info-circle"></i> We'll try common passwords and bypass owner restrictions automatically. Works for most PDFs!
             </small>
           </div>
 
